Fix overflow issue on profile page.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,7 @@ body {
     background: rgb(40, 40, 93);
     background: linear-gradient(90deg, rgba(40, 40, 93, 1) 0%, rgba(23, 21, 41, 1) 100%);
     min-height: 100vh;
+    max-width: 100vw;
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -9,10 +10,6 @@ body {
 
 .modal-backdrop {
     display: none;
-}
-
-.body-test {
-    width: 100vw;
 }
 
 /* Pop ups */
